--- a/Templater.Core/Templater.Core.csproj
+++ b/Templater.Core/Templater.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.27.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Octokit" Version="6.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
