--- a/Templater.Core/Templater.Core.csproj
+++ b/Templater.Core/Templater.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Octokit" Version="6.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
+    <PackageReference Include="CrossCommands" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
